<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Mutui Student Loan -->
    <string name="app_name">Mutui Tuition</string>

    <!-- Main Activity -->
    <string name="main_textview_monthly_label">Monthly Payment</string>
    <string name="main_textview_net_label">Amount Paid</string>
    <string name="main_textview_totalinterest_label">Interest Paid</string>
    <string name="main_textview_monthly">0</string>
    <string name="main_textview_net">0</string>
    <string name="main_textview_totalinterest">0</string>
    <string name="main_textview_principal">Principal Amount ($)</string>
    <string name="main_textview_term">Term (years)</string>
    <string name="main_textview_interestrate">Interest Rate (%)</string>
    <string name="main_edittext_principal">25000</string>
    <string name="main_edittext_term">5</string>
    <string name="main_edittext_interestrate">4.5</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

</resources>